fix(docs): hide scrollbar in codehike (#1396)
# Overview

hide the scrollbar that appears within the codehike section.

before:


https://github.com/user-attachments/assets/314edf57-35c2-4de6-8844-221ad78de9da


## PR Checklist

- [x] I did below actions if need

1. I read the [Contributing
Guide](https://github.com/toss/suspensive/blob/main/CONTRIBUTING.md)
2. I added documents and tests.

--- a/docs/suspensive.org/src/styles/globals.css
+++ b/docs/suspensive.org/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-none {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-none::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
